# lattice-gas

./: .gitignore  Cargo.toml  build-rust-lib.sh  changelog.md
lattice_gas_backend/: Cargo.toml
lattice_gas_backend/src/: analysis.rs  binary_sum_tree.rs  boundary_condition.rs  calculate_cgf.rs  ending_criterion.rs  lib.rs  markov_chain.rs  python_lib.rs  reaction.rs  serialize.rs  simulate.rs
lattice_gas_backend/src/analysis/: cnt_rates.rs  commitance_probability.legacy.rs  commitance_probability.rs  droplets.rs  largest_droplet_over_time.rs
lattice_gas_backend/src/boundary_condition/: periodic_boundary.rs
lattice_gas_backend/src/ending_criterion/: largest_droplet_size.rs  particle_count.rs  reaction_count.rs  target_state.rs
lattice_gas_backend/src/markov_chain/: cnt_ladder_chain.rs  homogenous_chain.rs  homogenous_nvt_chain.rs  ising_chain.rs
lattice_gas_backend/tests/: integration_tests.rs
python/: coexistence.py  load.py  plot.py  propensity.py
python/main/: coexistence.py  effect_of_activity.py  example_main.py  multiprocess.py  step_j.py  test_cnt.py  time_to_reset.py
src/: analysis.rs  boundary_condition.rs  ending_criterion.rs  lib.rs  main.rs  markov_chain.rs  reaction.rs  serialize.rs  simulate.rs
src/analysis/: droplets.rs
src/boundary_condition/: periodic_boundary.rs
src/ending_criterion/: largest_droplet_size.rs  reaction_count.rs
src/markov_chain/: homogenous_chain.rs
tests/: consistency_tests.rs  integration_tests.rs
