[package]
name = "lattice-gas"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
flate2 = { version = "1.0" }
tar = { version = "0.4" }
tqdm = { version = "0.7" }

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[profile.release]
debug = 1