[package]
name = "lattice-gas"
version = "0.1.0"
edition = "2021"

[lib]
name = "lattice_gas"
crate-type = ["lib", "cdylib"]

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
rand = { version = "0.9" , features = ["thread_rng", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
flate2 = { version = "1.0" }
tar = { version = "0.4" }
tqdm = { version = "0.7" }
downcast-rs = { version = "2.0.1" }
pyo3 = { version = "0.24.2", features = ["extension-module"] }

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[profile.release]
debug = 1