[package]
name = "lattice_gas"
version = "3.2.0"
edition = "2021"

[lib]
name = "lattice_gas"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
rand = { version = "0.9" , features = ["thread_rng", "small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = { version = "1.3.0" }
typetag = { version = "0.2" }
flate2 = { version = "1.0" }
tar = { version = "0.4" }
tqdm = { version = "0.7" }
pyo3 = { version = "0.25.1" }
numpy = { version = "0.25" }

[features]
extension-module = ["pyo3/extension-module"]